--- a/WebMobile/src/components/itemproduct/Itemproduct.scss
+++ b/WebMobile/src/components/itemproduct/Itemproduct.scss
@@ -1,4 +1,5 @@
 .card-group{
+        // box-shadow: 0px 0px 6px #888888;
         width: 100%;
         .col-3{
             padding: 0px;
@@ -14,7 +15,7 @@
                 border: 1px solid white;
                 border-radius: 0px;
                 &:hover{
-                    border: 1px solid rgba(0, 0, 0, 0.125);
+                    border: 1px solid rgba(133, 12, 12, 0.125);
                 }
                 img{
                     padding: 10px;
