--- a/WebMobile/src/main/product/Product.scss
+++ b/WebMobile/src/main/product/Product.scss
@@ -2,15 +2,14 @@
     background-color: #F5F8FD;
     &__drop{
         min-width: 200px;
-        display: inline-grid;
-        margin: 30px;
+        display: inline-block;
         border: 1px solid #eaedf3;
         &__item{
             font-weight: 600;
             background-color: white;
             text-align: left;
             padding: 15px;
-            max-height: 50px;
+            min-height: 50px;
             border-radius: 0px;
             span{
                 font-size: larger;
@@ -22,28 +21,24 @@
                 background-color: #F5F8FD;
             }
         }
-        // &__right{
-        //     display: none;
-        // }
-        // &:hover 
+        &__right{
+            display: none;
+        }
         &__right{
             display: block;
-            min-height: 252px;
-            padding: 18px;
-            position: absolute;
-            transform: translate3d(198px, 0px, 0px);
+            min-height: 50px;
+            padding: 15px;
+            // position: absolute;
+            // transform: translate3d(198px, 0px, 0px);
             top: -1px;
             left: 0px;
             will-change: transform;
             min-width: 200px;
             background-color: white;
-            border: 1px solid #eaedf3;
+            // border: 1px solid #eaedf3;
             font-weight: 600;
             font-size: larger;
         }
-        // &:hover .dropdown-menu{
-        //     display: block;
-        // }
     }
 }
 
