--- a/WebMobile/src/main/product/Product.scss
+++ b/WebMobile/src/main/product/Product.scss
@@ -1,15 +1,17 @@
 .product{
     background-color: #F5F8FD;
     &__drop{
-        min-width: 200px;
-        display: inline-block;
+        width: 202px;
+        display: flex;
+        margin: 30px;
         border: 1px solid #eaedf3;
         &__item{
+            
             font-weight: 600;
             background-color: white;
             text-align: left;
             padding: 15px;
-            min-height: 50px;
+            max-height: 50px;
             border-radius: 0px;
             span{
                 font-size: larger;
@@ -17,28 +19,38 @@
             a{
                 float: right;
             }
-            &:hover{
-                background-color: #F5F8FD;
-            }
+            
         }
         &__right{
             display: none;
         }
-        &__right{
-            display: block;
+        &:hover &__right{
+                min-height: 50px;
+                display: block;
+                padding: 15px;
+                will-change: transform;
+                min-width: 200px;
+                background-color: white;
+                font-weight: 600;
+                span{
+                    font-size: larger;
+                }
+        }
+        &__right1{
+            display: none;
+        }
+        &:hover &__right1{
             min-height: 50px;
+            display: block;
             padding: 15px;
-            // position: absolute;
-            // transform: translate3d(198px, 0px, 0px);
-            top: -1px;
-            left: 0px;
             will-change: transform;
             min-width: 200px;
             background-color: white;
-            // border: 1px solid #eaedf3;
             font-weight: 600;
-            font-size: larger;
-        }
+            span{
+                font-size: larger;
+            }
+    }
     }
 }
 
