--- a/WebMobile/src/main/homepage/Homepage.scss
+++ b/WebMobile/src/main/homepage/Homepage.scss
@@ -1,66 +1,16 @@
 .container{
     margin-top: 20px;
     &__top{
-        display: flow-root;
+        display: flex;
         width: 80%;
         margin: auto;
         &__left{
-            width: 30%;
-            border: 1px solid rgb(212, 212, 212);
-            border-radius: 5px;
-            float: left;
-            background-color: white;
-            li{
-            }
-            &__dropdown{
-                width: 100%;
-                position: relative;
-                display: inline-block;
-                button{
-                    width: 100%;
-                    background-color: #4CAF50;
-                    color: white;
-                    padding: 16px;
-                    font-size: 16px;
-                    border: none;
-                    cursor: pointer;
-                }
-                &__content{
-                    right: 0;
-                    display: none;
-                    position: absolute;
-                    background-color: #f9f9f9;
-                    min-width: 160px;
-                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                    // padding: 12px 16px;
-                    z-index: 1;
-                    a{
-                        color: black;
-                        padding: 12px 16px;
-                        text-decoration: none;
-                        display: block;
-                        &:hover{
-                            background-color: #f1f1f1
-                        }
-                    }
-                    // &:hover a{
-                    //     background-color: #f1f1f1
-                    // }
-                    
-                }
-                &:hover &__content{
-                    display: block;
-                }
-                // &:hover button{
-                //     background-color: #3e8e41;
-                // }
-                
-            }
+            
         }
         &__right{
             // width: 60%;
             width: 100%;
-            float: right;
+            // float: right;
             background-color: white;
             margin-bottom: 20px;
         }
