--- a/WebMobile/src/components/productdetail/Productdetail.scss
+++ b/WebMobile/src/components/productdetail/Productdetail.scss
@@ -99,6 +99,9 @@
                         font-weight: 700;
                     }
                 }
+                &__body{
+                    padding: 10px
+                }
             }
         }
     }
