--- a/WebMobile/src/components/slideshow/slideshow-gallery.css
+++ b/WebMobile/src/components/slideshow/slideshow-gallery.css
@@ -35,7 +35,7 @@
 .lp-slideshow-gallery>.container>.slide>.image {
   width: 100%;
   height: 100%;
-  object-fit: cover
+  /* object-fit: cover */
 }
 
 .lp-slideshow-gallery>.container>.slide>.number-text {
