--- a/WebMobile/src/components/compare/compare.scss
+++ b/WebMobile/src/components/compare/compare.scss
@@ -15,14 +15,32 @@
         &__information{
             width: 100%;
             &__1{
+                
                 text-align: center;
                 span{
                     color: #E11B1E;
                     font-size: large;
                     font-weight: 500;
                 }
+                img{
+                    padding: 10px 10px;
+                    max-width: 100%;
+                    max-height: 300px;
+                }
             }
-            
+            &__2{
+                text-align: center;
+                // span{
+                //     color: #E11B1E;
+                //     font-size: large;
+                //     font-weight: 500;
+                // }
+                // img{
+                //     padding: 10px 10px;
+                //     max-width: 100%;
+                //     max-height: 300px;
+                // }
+            }
         }
         input{
             width: 100%;
@@ -30,9 +48,10 @@
             border-radius: 4px;
             padding: 10px;
         }
-        img{
-            padding: 10px 10px;
-            max-width: 100%;
+        span{
+            color: #E11B1E;
+            font-size: large;
+            font-weight: 500;
         }
     }
     &__information{
