--- a/WebMobile/src/components/dropproduct/DropProduct.scss
+++ b/WebMobile/src/components/dropproduct/DropProduct.scss
@@ -3,8 +3,7 @@
     &__drop{
         width: 202px;
         display: flex;
-        margin: 30px;
-        border: 1px solid #eaedf3;
+        // border: 1px solid #eaedf3;
         &__item{
             
             font-weight: 600;
@@ -22,6 +21,7 @@
             
         }
         &__right{
+            z-index: 100;
             display: none;
         }
         &:hover &__right{
@@ -34,6 +34,9 @@
                 font-weight: 600;
                 span{
                     font-size: larger;
+                }
+                a{
+                    float: right;
                 }
         }
         &__right1{
