--- a/WebMobile/src/components/itemproduct/Itemproduct.scss
+++ b/WebMobile/src/components/itemproduct/Itemproduct.scss
@@ -15,7 +15,9 @@
                 border: 1px solid white;
                 border-radius: 0px;
                 &:hover{
-                    border: 1px solid rgba(133, 12, 12, 0.125);
+                    box-shadow: 0px 0px 3px #888888;
+                    // border: 1px solid rgba(133, 12, 12, 0.125);
+                    z-index: 100;
                 }
                 img{
                     padding: 10px;
