--- a/WebMobile/src/main/homepage/Homepage.scss
+++ b/WebMobile/src/main/homepage/Homepage.scss
@@ -1,23 +1,26 @@
 .container{
-    margin-top: 20px;
     &__top{
         display: flex;
         width: 80%;
         margin: auto;
         &__left{
-            
+            margin-top: 20px;
+            z-index: 100;
+            // max-width: 100%;
         }
         &__right{
+            margin-top: 20px;
             // width: 60%;
-            width: 100%;
+            // width: 100%;
             // float: right;
-            background-color: white;
             margin-bottom: 20px;
+            max-width: 100%;
         }
     }
     &__product{
         margin: auto;
         width: 80%;
+
         &__seemore{
             width: 100%;
             button{
@@ -52,6 +55,7 @@
             }
         }
         &__item{
+            background-color: white;
             display: flow-root;
         }
     }
