--- a/WebMobile/src/components/productdetail/Productdetail.scss
+++ b/WebMobile/src/components/productdetail/Productdetail.scss
@@ -9,6 +9,7 @@
         .card-group{
             .col-4{
                 max-width: 100%;
+                margin-top: 10px;
             }
         }
         &__left{
@@ -69,10 +70,13 @@
                 background-color: #F51F58;
                 border: 1px solid #F51F58;
                 border-radius: 5px;
-                width: 50%;
+                // width: 46%;
+                width: 100%;
+                height: 100%;
                 padding: 10px;
                 color: white;
                 font-size: 1.2em;
+                // margin: 5px;
                 &:hover{
                     background-color: #F5F8FD;
                     border: 1px solid #F51F58;
