--- a/WebMobile/src/components/itemproduct/Itemproduct.scss
+++ b/WebMobile/src/components/itemproduct/Itemproduct.scss
@@ -1,7 +1,7 @@
-.card-group{
+.itemproduct{
         // box-shadow: 0px 0px 6px #888888;
         width: 100%;
-        .col-3{
+        &__box{
             padding: 0px;
             max-width: 100%;
             // max-width: 222px;
